# AlpacAI

./: .gitignore  README.md  conversationAgent.py  fetch-agent.md  payment.md  pyproject.toml  requirements.txt  sdv-link-mixed-reality-kit.md  sdv_llm.py  seat.md  simulation.md  speechToText.py  textToSpeech.py
.devcontainer/: devcontainer.json
doc/: architecture.drawio  conversationalsdv.drawio
docker/: Dockerfile  README.md  docker-compose.yml
resources/: app_config.json  sequence_config.json
src/alpacai/: app.py  app_drowsiness.py  conversation_agent.py  ollama_agent.py
src/alpacai/core/genai/: sdv_llm.py  speech_to_text.py  text_to_speech.py
src/alpacai/core/perception/distraction/: drowsiness.py
src/alpacai/core/perception/drowsiness/: logic.py
src/drowsiness/: main.py
src/location/: loc_provider.py  loc_subscriber.py
src/vehicle_location/: CMakeLists.txt  LICENSE  package.xml  setup.cfg  setup.py
src/vehicle_location/include/vehicle_location/: vehicle_location.hpp
src/vehicle_location/src/: vehicle_location.cpp  vehicle_location_node.cpp
